--- a/templates/index.html
+++ b/templates/index.html
@@ -13,7 +13,7 @@
                     <h1 align="center">Mission to Mars</h1>
                     
                     <p align="Center">
-                        <a class="btn btn-primary btn-lg" href="#" role="button">Scrape New Data</a>
+                        <a class="btn btn-primary btn-lg" href="/scrape" role="button">Scrape New Data</a>
                     </p>
                 </div>
                 <div class="page-header">
